Converted the SlikSVN link to a direct link at http://www.nmr-relax.com/windows_devel.html.
This was identified by the W3C link checker (http://validator.w3.org/checklink).

--- a/windows_devel.html
+++ b/windows_devel.html
@@ -272,7 +272,7 @@
 
    <div id="svn_download" class="main_h2">
     <h2>3.2 Download and installation</h2>
-      <p>The MS Windows installation files are provided by <a href="http://subversion.apache.org/packages.html#windows">numerous third parties</a> rather than being directly supplied by the subversion project.  Installation is slightly different for each package but is simple enough.  You can choose the provider as you wish, but <a href="http://www.sliksvn.com/en/download">SlikSVN</a> is recommended as it will provide all the tools you will need and does not require registration.</p>
+      <p>The MS Windows installation files are provided by <a href="http://subversion.apache.org/packages.html#windows">numerous third parties</a> rather than being directly supplied by the subversion project.  Installation is slightly different for each package but is simple enough.  You can choose the provider as you wish, but <a href="https://sliksvn.com/download/">SlikSVN</a> is recommended as it will provide all the tools you will need and does not require registration.</p>
 
    </div>
 
