Fix for the dead ICMRBS 2006 link at http://www.nmr-relax.com/events.html.

--- a/events.html
+++ b/events.html
@@ -119,7 +119,7 @@
     <table class="conf-table">
       <tbody>
         <tr>
-          <td class="conf-table-icon"><a href="http://medusa.nmr.mpibpc.mpg.de/icmrbs/"><img src="images/icmrbs2006/silouette_mini.png" alt="ICMRBS 2006" class="image"/></a></td>
+          <td class="conf-table-icon"><a href="http://www.icmrbs2006.org/"><img src="images/icmrbs2006/silouette_mini.png" alt="ICMRBS 2006" class="image"/></a></td>
           <td>
             <table class="conf-subtable">
               <tbody>
