--- a/links.html
+++ b/links.html
@@ -84,7 +84,7 @@
     <tr id="Mail_archive" class="link_tr">
       <td class="link_logo_td"><a href="http://www.mail-archive.com"><img src="images/mail-archive.png" alt="The mail archive logo" class="image"/></a></td>
       <td>An easy-to-use archiving service for electronic mailing lists.</td>
-      <td>The archived relax mailing lists include <a href="http://www.mail-archive.com/relax-announce@gna.org/">relax-announce</a>, <a href="http://www.mail-archive.com/relax-users@gna.org/">relax-users</a>, <a href="http://www.mail-archive.com/relax-devel@gna.org/">relax-devel</a>, and <a href="http://mail-archive.com/relax-commits@gna.org/">relax-commits</a>.</td>
+      <td>The archived relax mailing lists include <a href="http://www.mail-archive.com/relax-announce@gna.org/">relax-announce</a>, <a href="http://www.mail-archive.com/relax-users@gna.org/">relax-users</a>, <a href="http://www.mail-archive.com/relax-devel@gna.org/">relax-devel</a>, and <a href="http://www.mail-archive.com/relax-commits@gna.org/">relax-commits</a>.</td>
     </tr>
 
     <tr id="MARC" class="link_tr">
