Fix for the "Development platform setup" collapsible side menu.
This is for all webpages at http://www.nmr-relax.com.

--- a/menu.html
+++ b/menu.html
@@ -21,7 +21,7 @@
   <div class="menu_def"><a href="http://www.nmr-relax.com/faq.html" title="Frequently asked questions (FAQ)">FAQ</a></div>
   <div class="menu_def_collapsable" onclick="collapseMenu('devel_submenu')">Development platform setup</div>
     <div id="devel_submenu" class="submenu">
-      <a class="submenu_def" href="http://www.nmr-relax.com/devel_platform.html">Overview</a></div>
+      <a class="submenu_def" href="http://www.nmr-relax.com/devel_platform.html">Overview</a>
       <a class="submenu_def" href="http://www.nmr-relax.com/windows_devel.html">MS Windows</a>
     </div>
 
