--- a/analyses/relaxation_dispersion.html
+++ b/analyses/relaxation_dispersion.html
@@ -27,7 +27,7 @@
   <div class="main_box">
     <h1>Relaxation dispersion analysis</h1>
 
-      <p>Since the release of <a href="https://gna.org/forum/forum.php?forum_id=2421">relax version 3.1.0</a>, relax supports the <a href="http://www.nmr-relax.com/manual/Relaxation_dispersion.html">analysis of NMR relaxation dispersion data</a> (see <a href="../refs.html#Morin14">Morin et al., 2014</a>).  All dispersion data types are supported as well as an almost complete list of relaxation dispersion models, both analytic and numeric.</p>
+      <p>Since the release of <a href="http://wiki.nmr-relax.com/Relax_3.1.0">relax version 3.1.0</a>, relax supports the <a href="http://www.nmr-relax.com/manual/Relaxation_dispersion.html">analysis of NMR relaxation dispersion data</a> (see <a href="../refs.html#Morin14">Morin et al., 2014</a>).  All dispersion data types are supported as well as an almost complete list of relaxation dispersion models, both analytic and numeric.</p>
 
     <ul>
       <li><a href="relaxation_dispersion.html#data">Relaxation dispersion data</a></li>
