Added the type attribute for the Google gadget custom search <script> tag.
This is for http://www.nmr-relax.com/communication.html.  The problem was identified by the W3C
validator (http://validator.w3.org/).

--- a/communication.html
+++ b/communication.html
@@ -166,7 +166,7 @@
       <p>Alternatively all lists can be <a href="http://www.google.com/cse/home?cx=000230621675959489540%3Aianvteuoucy">searched</a> simultaneously:</p>
 
       <!-- Google gadget -->
-      <script>
+      <script type="text/javascript">
         (function() {
           var cx = '000230621675959489540:ianvteuoucy';
           var gcse = document.createElement('script');
