--- a/download.html
+++ b/download.html
@@ -61,7 +61,7 @@
   <div id="Current_release" class="main_box">
     <h1>Current release</h1>
 
-    <p>The current stable release is <a href="http://wiki.nmr-relax.com/Relax_3.3.3">relax version 3.3.3</a> <em>(24 November 2014)</em>.</p>
+    <p>The current stable release is <a href="http://wiki.nmr-relax.com/Relax_3.3.4">relax version 3.3.4</a> <em>(3 December 2014)</em>.</p>
 
       <p>relax binaries have been pre-compiled for a number of computer architectures.  These are based on Python 2.7 but usually work with other Python versions.  If not, or if binaries for your system do not exist, please download the source release (note that the compilation of binary modules is not a prerequisite for using relax).  If the binary distribution file for your architecture does not correspond to the most up to date version of relax, please download the up-to-date source release instead.  If you would like to contribute binary packages for your specific architecture, please read the <a href="http://www.nmr-relax.com/manual/Open_source_infrastructure.html">Open source infrastructure</a> chapter of the relax manual for details.</p>
 
@@ -145,16 +145,16 @@
       <td class="software_td_head3"><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-3.3.3.GNU-Linux.i686.tar.bz2" title="relax">relax-3.3.3.GNU-Linux.i686.tar.bz2</a></td>
-      <td><tt><small>fb0df1a3e9f30c90ca9b0dfac9cc3da3</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-3.3.3.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td align="right">89,101,963</td>
+      <td><a href="http://download.gna.org/relax/relax-3.3.4.GNU-Linux.i686.tar.bz2" title="relax">relax-3.3.4.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>029c96bc320376ef56568ae9c7a9730f</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-3.3.4.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td align="right">89,217,092</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-3.3.3.GNU-Linux.x86_64.tar.bz2" title="relax">relax-3.3.3.GNU-Linux.x86_64.tar.bz2</a></td>
-      <td><tt><small>2c4ca42a92e5b717247d39a2a6d891dc</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-3.3.3.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td align="right">89,170,384</td>
+      <td><a href="http://download.gna.org/relax/relax-3.3.4.GNU-Linux.x86_64.tar.bz2" title="relax">relax-3.3.4.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>c3a08f0dafce797a0f78a96952f25474</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-3.3.4.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td align="right">89,205,519</td>
     </tr>
   </tbody>
 </table>
@@ -186,10 +186,10 @@
       <td class="software_td_head3"><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-3.3.3.Win32.zip" title="relax">relax-3.3.3.Win32.zip</a></td>
-      <td><tt><small>82e76cae78d6b570f54737fe2f1efd38</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-3.3.3.Win32.zip.sig" title="relax GPG signature">signature</a></td>
-      <td align="right">94,361,578</td>
+      <td><a href="http://download.gna.org/relax/relax-3.3.4.Win32.zip" title="relax">relax-3.3.4.Win32.zip</a></td>
+      <td><tt><small>c49bcd3491ccc8ec86e27f0a4baa52fd</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-3.3.4.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td align="right">94,388,258</td>
     </tr>
   </tbody>
 </table>
@@ -219,10 +219,10 @@
       <td class="software_td_head3"><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-3.3.3.Darwin.dmg" title="relax">relax-3.3.3.Darwin.dmg</a></td>
-      <td><tt><small>82a84fa86758007fbd3e18be8f47ace8</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-3.3.3.Darwin.dmg.sig" title="relax GPG signature">signature</a></td>
-      <td align="right">283,681,113</td>
+      <td><a href="http://download.gna.org/relax/relax-3.3.4.Darwin.dmg" title="relax">relax-3.3.4.Darwin.dmg</a></td>
+      <td><tt><small>36473879f31272e1f1607173aff2810f</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-3.3.4.Darwin.dmg.sig" title="relax GPG signature">signature</a></td>
+      <td align="right">283,539,491</td>
     </tr>
   </tbody>
 </table>
@@ -284,16 +284,16 @@
       <td class="software_td_head3"><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-3.3.3.src.tar.bz2" title="relax">relax-3.3.3.src.tar.bz2</a></td>
-      <td><tt><small>bfc7107eeeb88d13097ae291592dbaa4</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-3.3.3.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td align="right">89,150,352</td>
+      <td><a href="http://download.gna.org/relax/relax-3.3.4.src.tar.bz2" title="relax">relax-3.3.4.src.tar.bz2</a></td>
+      <td><tt><small>44f7a183e2e23f37bdaa0a15e5a0a448</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-3.3.4.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td align="right">89,206,485</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-3.3.3.src.zip" title="relax">relax-3.3.3.src.zip</a></td>
-      <td><tt><small>1eba253a8b2fc83d868b3ec2635c8111</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-3.3.3.src.zip.sig" title="relax GPG signature">signature</a></td>
-      <td align="right">94,371,936</td>
+      <td><a href="http://download.gna.org/relax/relax-3.3.4.src.zip" title="relax">relax-3.3.4.src.zip</a></td>
+      <td><tt><small>267e0e30ce995bea02d12f1162e0dd40</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-3.3.4.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td align="right">94,503,644</td>
     </tr>
   </tbody>
 </table>
@@ -374,6 +374,44 @@
       <td class="software_td_head2"><strong>MD5 checksum</strong></td>
       <td class="software_td_head3"><strong>GPG signature</strong></td>
       <td class="software_td_head3"><strong>File size (bytes)</strong></td>
+    </tr>
+
+    <tr><td><em><a href="http://wiki.nmr-relax.com/Relax_3.3.4">Version 3.3.4</a> (2014-12-03)</em></td></tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-3.3.4.GNU-Linux.i686.tar.bz2" title="relax">relax-3.3.4.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>029c96bc320376ef56568ae9c7a9730f</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-3.3.4.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td align="right">89,217,092</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-3.3.4.GNU-Linux.x86_64.tar.bz2" title="relax">relax-3.3.4.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>c3a08f0dafce797a0f78a96952f25474</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-3.3.4.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td align="right">89,205,519</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-3.3.4.Win32.zip" title="relax">relax-3.3.4.Win32.zip</a></td>
+      <td><tt><small>c49bcd3491ccc8ec86e27f0a4baa52fd</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-3.3.4.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td align="right">94,388,258</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-3.3.4.Darwin.dmg" title="relax">relax-3.3.4.Darwin.dmg</a></td>
+      <td><tt><small>36473879f31272e1f1607173aff2810f</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-3.3.4.Darwin.dmg.sig" title="relax GPG signature">signature</a></td>
+      <td align="right">283,539,491</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-3.3.4.src.tar.bz2" title="relax">relax-3.3.4.src.tar.bz2</a></td>
+      <td><tt><small>44f7a183e2e23f37bdaa0a15e5a0a448</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-3.3.4.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td align="right">89,206,485</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-3.3.4.src.zip" title="relax">relax-3.3.4.src.zip</a></td>
+      <td><tt><small>267e0e30ce995bea02d12f1162e0dd40</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-3.3.4.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td align="right">94,503,644</td>
     </tr>
 
     <tr><td><em><a href="http://wiki.nmr-relax.com/Relax_3.3.3">Version 3.3.3</a> (2014-11-24)</em></td></tr>
