Fix for the Google gadget for searching the relax mailing lists.
This is for the page http://www.nmr-relax.com/communication.html, and it allows the page to pass the
W3C validator (http://validator.w3.org/).

--- a/communication.html
+++ b/communication.html
@@ -178,7 +178,7 @@
           s.parentNode.insertBefore(gcse, s);
         })();
       </script>
-      <gcse:search></gcse:search>
+      <div class="gcse-search"></div>
     </div>
 
   </div>
