Created a new page http://www.nmr-relax.com/search.html to search through all of the relax webpages.
This uses a custom Google search which will search http://www.nmr-relax.com,
http://wiki.nmr-relax.com, the mailing list archives, etc.

--- a/menu.html
+++ b/menu.html
@@ -28,6 +28,7 @@
   <div class="menu_def"><a href="http://www.nmr-relax.com/events.html" title="The material related to events publicizing relax">Events</a></div>
   <div class="menu_def"><a href="http://www.nmr-relax.com/refs.html" title="References for the program relax">References</a></div>
   <div class="menu_def"><a href="http://www.nmr-relax.com/links.html" title="Where to find relax on the web, and other links">Links</a></div>
+  <div class="menu_def"><a href="http://www.nmr-relax.com/search.html" title="Search">Search</a></div>
   <div class="menu_def"><a href="http://wiki.nmr-relax.com/" title="The relax wiki">Wiki</a></div>
 
   <div class="menu_title">relax @ Gna!</div>
