--- a/search.html
+++ b/search.html
@@ -25,9 +25,9 @@
 <div class="main">
 <!-- Index -->
   <div class="main_box">
-    <h1>Search the relax websites</h1>
+    <h1>Search</h1>
 
-      <p>Search all of the relax websites and mailing lists:</p>
+    <p>Search the <a href="http://www.nmr-relax.com/">relax website</a>, <a href="http://wiki.nmr-relax.com/">relax wiki</a>, <a href="http://www.nmr-relax.com/maual/">relax manual</a>, <a href="http://www.nmr-relax.com/api/">relax API documentation</a> and the <a href="http://www.nmr-relax.com/communication.html">relax mailing list archives</a>:</p>
 
       <!-- Google gadget -->
       <script type="text/javascript">
