Set up a redirect for the structure.align user function to structure.superimpose.

--- a/manual/structure_align.html
+++ b/manual/structure_align.html
@@ -1,304 +1,6 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.1//EN">
-
-<!--Converted with LaTeX2HTML 2008 (1.71)
-original version by:  Nikos Drakos, CBLU, University of Leeds
-* revised and updated by:  Marcus Hennecke, Ross Moore, Herb Swan
-* with significant contributions from:
-  Jens Lippmann, Marek Rouchal, Martin Wilck and others -->
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <HTML>
 <HEAD>
-<TITLE>structure.align</TITLE>
-<META NAME="description" CONTENT="structure.align">
-<META NAME="keywords" CONTENT="relax">
-<META NAME="resource-type" CONTENT="document">
-<META NAME="distribution" CONTENT="global">
-
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=utf-8">
-
-  <!--Google analytics JS-->
-  <script type="text/javascript">
-  
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-30096326-1']);
-    _gaq.push(['_setDomainName', 'nmr-relax.com']);
-    _gaq.push(['_trackPageview']);
-  
-    (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
-  
-  </script>
-
-<LINK REL="STYLESHEET" HREF="relax.css">
-
-<LINK REL="next" HREF="structure_atomic_fluctuations.html">
-<LINK REL="previous" HREF="structure_add_model.html">
-<LINK REL="up" HREF="The_list_of_functions.html">
-<LINK REL="next" HREF="structure_atomic_fluctuations.html">
+    <meta http-equiv="refresh" content="0; url=http://www.nmr-relax.com/manual/structure_superimpose.html">
 </HEAD>
-
-<BODY >
-
-<DIV CLASS="navigation"><!--Navigation Panel-->
-<A NAME="tex2html20499"
-  HREF="structure_atomic_fluctuations.html">
-<IMG WIDTH="48" HEIGHT="48" TITLE="Next" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html20493"
-  HREF="The_list_of_functions.html">
-<IMG WIDTH="48" HEIGHT="48" TITLE="Up" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html20487"
-  HREF="structure_add_model.html">
-<IMG WIDTH="48" HEIGHT="48" TITLE="Previous" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html20495"
-  HREF="Contents.html">
-<IMG WIDTH="48" HEIGHT="48" TITLE="Contents" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html20497"
-  HREF="Index.html">
-<IMG WIDTH="48" HEIGHT="48" TITLE="Index" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html1"
-  HREF="http://download.gna.org/relax/manual/relax.pdf"><IMG
- ALIGN="BOTTOM" BORDER="0" SRC="http://www.nmr-relax.com/images/pdf_icon_nav.png"
- ALT="pdf_icon_nav.png"></A><A NAME="tex2html2"
-  HREF="http://www.nmr-relax.com"><IMG
- ALIGN="BOTTOM" BORDER="0" SRC="http://www.nmr-relax.com/images/relax_logo_nav.png"
- ALT="relax_logo_nav.png"></A>
-<BR>
-<B> Next:</B> <A NAME="tex2html20500"
-  HREF="structure_atomic_fluctuations.html">structure.atomic_fluctuations</A>
-<B> Up:</B> <A NAME="tex2html20494"
-  HREF="The_list_of_functions.html">The list of functions</A>
-<B> Previous:</B> <A NAME="tex2html20488"
-  HREF="structure_add_model.html">structure.add_model</A>
- &nbsp; <B>  <A NAME="tex2html20496"
-  HREF="Contents.html">Contents</A></B> 
- &nbsp; <B>  <A NAME="tex2html20498"
-  HREF="Index.html">Index</A></B> 
-<BR>
-<BR></DIV>
-<!--End of Navigation Panel-->
-<!--Table of Child-Links-->
-<A NAME="CHILD_LINKS"><STRONG>Subsections</STRONG></A>
-
-<UL CLASS="ChildLinks">
-<LI><A NAME="tex2html20501"
-  HREF="structure_align.html#SECTION0812229100000000000000">Synopsis</A>
-<LI><A NAME="tex2html20502"
-  HREF="structure_align.html#SECTION0812229200000000000000">Defaults</A>
-<LI><A NAME="tex2html20503"
-  HREF="structure_align.html#SECTION0812229300000000000000">Keyword arguments</A>
-<LI><A NAME="tex2html20504"
-  HREF="structure_align.html#SECTION0812229400000000000000">Description</A>
-<LI><A NAME="tex2html20505"
-  HREF="structure_align.html#SECTION0812229500000000000000">Prompt examples</A>
-</UL>
-<!--End of Table of Child-Links-->
-<HR>
-
-<H2><A NAME="SECTION0812229000000000000000"></A> <A NAME="uf:_structure.align"></A>
-<BR>
-structure.align
-</H2>
-<IMG
-  WIDTH="128" HEIGHT="128" ALIGN="BOTTOM" BORDER="0"
- SRC="./structure.png"
- ALT="Image structure"> 
-
-<P>
-
-<H3><A NAME="SECTION0812229100000000000000">
-Synopsis</A>
-</H3>
-
-<P>
-Align and superimpose different structures.
-
-<P>
-
-<H3><A NAME="SECTION0812229200000000000000">
-Defaults</A>
-</H3>
-
-<P>
-<DIV ALIGN="LEFT">
-<SPAN  CLASS="textsf"><SPAN  CLASS="textbf">structure.align</SPAN>(pipes=None, models=None, molecules=None, atom_id=None, displace_id=None, method=`fit to mean', matrix=`BLOSUM62', gap_open_penalty=10.0, gap_extend_penalty=1.0, end_gap_open_penalty=0.0, end_gap_extend_penalty=0.0, centre_type=`centroid', centroid=None)</SPAN>
-
-</DIV>
-
-<P>
-
-<H3><A NAME="SECTION0812229300000000000000">
-Keyword arguments</A>
-</H3>
-
-<P>
- <SPAN  CLASS="textsf">pipes:</SPAN>  The data pipes to use in the alignment and superimposition.
-
-<P>
- <SPAN  CLASS="textsf">models:</SPAN>  The list of models for each data pipe to use in the alignment and superimposition.  The number of elements must match the pipes argument.  If no models are given, then all will be used.
-
-<P>
- <SPAN  CLASS="textsf">molecules:</SPAN>  The list of molecules<A NAME="39617"></A> for each data pipe to use in the alignment and superimposition.  This allows differently named molecules<A NAME="39618"></A> in the same or different data pipes to be superimposed.  The number of elements must match the pipes argument.  If no molecules<A NAME="39619"></A> are given, then all will be used.
-
-<P>
- <SPAN  CLASS="textsf">atom_id:</SPAN>  The atom identification string of the coordinates of interest.
-
-<P>
- <SPAN  CLASS="textsf">displace_id:</SPAN>  The atom identification string for restricting the displacement to a subset of all atoms.  If not set, then all atoms will be translated and rotated.  If supplied as a list of IDs, then the number of items must match the number of structures.
-
-<P>
- <SPAN  CLASS="textsf">method:</SPAN>  The superimposition method.
-
-<P>
- <SPAN  CLASS="textsf">matrix:</SPAN>  The substitution matrix to use in the pairwise sequence<A NAME="39628"></A> alignment algorithm.
-
-<P>
- <SPAN  CLASS="textsf">gap_open_penalty:</SPAN>  The penalty for introducing gaps, as a positive number.
-
-<P>
- <SPAN  CLASS="textsf">gap_extend_penalty:</SPAN>  The penalty for extending a gap, as a positive number.
-
-<P>
- <SPAN  CLASS="textsf">end_gap_open_penalty:</SPAN>  The optional penalty for opening a gap at the end of a sequence.<A NAME="39635"></A>
-
-<P>
- <SPAN  CLASS="textsf">end_gap_extend_penalty:</SPAN>  The optional penalty for extending a gap at the end of a sequence.<A NAME="39638"></A>
-
-<P>
- <SPAN  CLASS="textsf">centre_type:</SPAN>  The type of centre to user for the superimposition, <SPAN CLASS="MATH"><I>i</I></SPAN>.e. either the standard centroid superimposition or a superimposition using the centre of mass (CoM).
-
-<P>
- <SPAN  CLASS="textsf">centroid:</SPAN>  The alternative position of the centroid.
-
-<P>
-
-<H3><A NAME="SECTION0812229400000000000000">
-Description</A>
-</H3>
-
-<P>
-This allows a set of related structures to be superimposed to each other.  The current algorithm will only use atoms with the same residue name and number and atom name in the superimposition, hence this is not a true sequence<A NAME="39644"></A> alignment.  Just as with the structure.superimpose user function two methods are currently supported:
-
-<P>
-<DL>
-<DT><STRONG>`<TT>fit to mean</TT>' -</STRONG></DT>
-<DD>All models are fit to the mean structure.  This is the default and most accurate method for an ensemble description.  It is an iterative method which first calculates a mean structure and then fits each model to the mean structure using the Kabsch algorithm.  This is repeated until convergence.
-  
-</DD>
-<DT><STRONG>`<TT>fit to first</TT>' -</STRONG></DT>
-<DD>This is quicker but is not as accurate for an ensemble description.  The Kabsch algorithm is used to rotate and translate each model to be superimposed onto the first model of the first data pipe.
-</DD>
-</DL>
-
-<P>
-Support for multiple structures is provided by the data pipes, model numbers and molecule<A NAME="39649"></A> names arguments.  Each data pipe, model and molecule<A NAME="39650"></A> combination will be treated as a separate structure.  As only atomic coordinates with the same residue name and number and atom name will be assembled, structures with slightly different atomic structures can be compared.  If the list of models is not supplied, then all models of all data pipes will be used.  If the optional molecules<A NAME="39651"></A> list is supplied, each molecule<A NAME="39652"></A> in the list will be considered as a separate structure for comparison between each other.
-
-<P>
-The atom ID string, which uses the same notation as the spin ID, can be used to restrict the coordinates compared to a subset of molecules,<A NAME="39653"></A> residues, or atoms.  For example to only use backbone heavy atoms in a protein, set the atom ID to `<TT>@N,C,CA,O</TT>', assuming those are the names of the atoms in the 3D structural file.
-
-<P>
-The displacement ID string, which is similar to the atom ID, gives finer control over which atoms are translated and rotated by the algorithm.  When not set this allows, for example, to align structures based on a set of backbone heavy atoms and the backbone protons and side-chains are displaced by default.  Or if set to the same as the atom ID, if a single domain is aligned, then just that domain will be displaced.
-
-<P>
-To find common atoms between diverse structures, a sequence<A NAME="39655"></A> alignment is performed between the molecules.<A NAME="39656"></A>  This will be a pairwise alignment of each structure to the first.  The Needleman-Wunsch algorithm (NW70), modified to use the logic of the EMBOSS software for handling gap opening and extension penalties, as well as end penalties, will be used.  The substitution matrix can be one of BLOSUM62 or PAM250 for proteins, or NUC 4.4 for DNA/RNA.
-
-<P>
-By supplying the position of the centroid, an alternative position than the standard rigid body centre is used as the focal point of the superimposition.  The allows, for example, the superimposition about a pivot point.
-
-<P>
-
-<H3><A NAME="SECTION0812229500000000000000">
-Prompt examples</A>
-</H3>
-
-<P>
-To superimpose all sets of models, exactly as in the structure.superimpose user function, type one of:
-
-<P>
-<PRE>[numbers=none]
-relax&gt; structure.align()
-</PRE>
-
-<P>
-<PRE>[numbers=none]
-relax&gt; structure.align(method='fit to mean')
-</PRE>
-
-<P>
-To superimpose the models 1, 2, 3, 5 onto model 4, type:
-
-<P>
-<PRE>[numbers=none]
-relax&gt; structure.align(models=[[4, 1, 2, 3, 5]], method='fit to first')
-</PRE>
-
-<P>
-To superimpose an ensemble of protein structures using only the backbone heavy atoms, type one of:
-
-<P>
-<PRE>[numbers=none]
-relax&gt; structure.align(atom_id='@N,C,CA,O')
-</PRE>
-
-<P>
-<PRE>[numbers=none]
-relax&gt; structure.align(method='fit to mean', atom_id='@N,C,CA,O')
-</PRE>
-
-<P>
-To superimpose the structures in the `<TT>A</TT>' data pipe onto the structures of the `<TT>B</TT>' data pipe using backbone heavy atoms, type one of:
-
-<P>
-<PRE>[numbers=none]
-relax&gt; structure.align(['B', 'A'], None, 'fit to first', '@N,C,CA,O')
-</PRE>
-
-<P>
-<PRE>[numbers=none]
-relax&gt; structure.align(pipes=['B', 'A'], method='fit to first', atom_id='@N,C,CA,O')
-</PRE>
-
-<P>
-
-<BR>
-
-<DIV CLASS="navigation"><HR>
-<!--Navigation Panel-->
-<A NAME="tex2html20499"
-  HREF="structure_atomic_fluctuations.html">
-<IMG WIDTH="48" HEIGHT="48" TITLE="Next" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html20493"
-  HREF="The_list_of_functions.html">
-<IMG WIDTH="48" HEIGHT="48" TITLE="Up" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html20487"
-  HREF="structure_add_model.html">
-<IMG WIDTH="48" HEIGHT="48" TITLE="Previous" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html20495"
-  HREF="Contents.html">
-<IMG WIDTH="48" HEIGHT="48" TITLE="Contents" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html20497"
-  HREF="Index.html">
-<IMG WIDTH="48" HEIGHT="48" TITLE="Index" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html1"
-  HREF="http://download.gna.org/relax/manual/relax.pdf"><IMG
- ALIGN="BOTTOM" BORDER="0" SRC="http://www.nmr-relax.com/images/pdf_icon_nav.png"
- ALT="pdf_icon_nav.png"></A><A NAME="tex2html2"
-  HREF="http://www.nmr-relax.com"><IMG
- ALIGN="BOTTOM" BORDER="0" SRC="http://www.nmr-relax.com/images/relax_logo_nav.png"
- ALT="relax_logo_nav.png"></A>
-<BR>
-<B> Next:</B> <A NAME="tex2html20500"
-  HREF="structure_atomic_fluctuations.html">structure.atomic_fluctuations</A>
-<B> Up:</B> <A NAME="tex2html20494"
-  HREF="The_list_of_functions.html">The list of functions</A>
-<B> Previous:</B> <A NAME="tex2html20488"
-  HREF="structure_add_model.html">structure.add_model</A>
- &nbsp; <B>  <A NAME="tex2html20496"
-  HREF="Contents.html">Contents</A></B> 
- &nbsp; <B>  <A NAME="tex2html20498"
-  HREF="Index.html">Index</A></B> </DIV>
-<!--End of Navigation Panel-->
-<ADDRESS>
-The <a href="http://www.nmr-relax.com">relax</a> <a href="http://www.nmr-relax.com/manual/">user manual</a> (<a href="http://download.gna.org/relax/manual/relax.pdf">PDF</a>), created 2015-01-27.
-</ADDRESS>
-</BODY>
 </HTML>
