Updated the http://www.nmr-relax.com/download.html webpage for the relax 3.3.6 release.

--- a/download.html
+++ b/download.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <!--
-  Copyright (c) 2006-2013 Edward d'Auvergne.
+  Copyright (c) 2006-2015 Edward d'Auvergne.
   Copyright (c) 2011 Sebastien Morin.
   Permission is granted to copy, distribute and/or modify this document
   under the terms of the GNU Free Documentation License, Version 1.2
@@ -61,7 +61,7 @@
   <div id="Current_release" class="main_box">
     <h1>Current release</h1>
 
-    <p>The current stable release is <a href="http://wiki.nmr-relax.com/Relax_3.3.5">relax version 3.3.5</a> <em>(27 January 2015)</em>.</p>
+    <p>The current stable release is <a href="http://wiki.nmr-relax.com/Relax_3.3.6">relax version 3.3.6</a> <em>(4 February 2015)</em>.</p>
 
       <p>relax binaries have been pre-compiled for a number of computer architectures.  These are based on Python 2.7 but usually work with other Python versions.  If not, or if binaries for your system do not exist, please download the source release (note that the compilation of binary modules is not a prerequisite for using relax).  If the binary distribution file for your architecture does not correspond to the most up to date version of relax, please download the up-to-date source release instead.  If you would like to contribute binary packages for your specific architecture, please read the <a href="http://www.nmr-relax.com/manual/Open_source_infrastructure.html">Open source infrastructure</a> chapter of the relax manual for details.</p>
 
@@ -145,16 +145,16 @@
       <td class="software_td_head3"><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-3.3.5.GNU-Linux.i686.tar.bz2" title="relax">relax-3.3.5.GNU-Linux.i686.tar.bz2</a></td>
-      <td><tt><small>647e94b544a19c33ab4b1ecda6213a61</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-3.3.5.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td align="right">89,989,973</td>
+      <td><a href="http://download.gna.org/relax/relax-3.3.6.GNU-Linux.i686.tar.bz2" title="relax">relax-3.3.6.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>d60666e35a490ca58dd3e0e90688c4ec</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-3.3.6.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td align="right">90,072,588</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-3.3.5.GNU-Linux.x86_64.tar.bz2" title="relax">relax-3.3.5.GNU-Linux.x86_64.tar.bz2</a></td>
-      <td><tt><small>c55e72cbd49af1e7a229add9a18a2eff</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-3.3.5.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td align="right">90,150,281</td>
+      <td><a href="http://download.gna.org/relax/relax-3.3.6.GNU-Linux.x86_64.tar.bz2" title="relax">relax-3.3.6.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>d1c837c944a69dff680ec1eb38663a6d</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-3.3.6.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td align="right">90,031,646</td>
     </tr>
   </tbody>
 </table>
@@ -186,10 +186,10 @@
       <td class="software_td_head3"><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-3.3.5.Win32.zip" title="relax">relax-3.3.5.Win32.zip</a></td>
-      <td><tt><small>fca9297d3c9eef3b22f609c52be04a00</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-3.3.5.Win32.zip.sig" title="relax GPG signature">signature</a></td>
-      <td align="right">95,304,602</td>
+      <td><a href="http://download.gna.org/relax/relax-3.3.6.Win32.zip" title="relax">relax-3.3.6.Win32.zip</a></td>
+      <td><tt><small>64259bb575d712ecd4fec07bc81100f1</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-3.3.6.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td align="right">95,348,971</td>
     </tr>
   </tbody>
 </table>
@@ -219,10 +219,10 @@
       <td class="software_td_head3"><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-3.3.5.Darwin.dmg" title="relax">relax-3.3.5.Darwin.dmg</a></td>
-      <td><tt><small>ec1cff7ac68b09bab3f498f62230230e</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-3.3.5.Darwin.dmg.sig" title="relax GPG signature">signature</a></td>
-      <td align="right">285,466,248</td>
+      <td><a href="http://download.gna.org/relax/relax-3.3.6.Darwin.dmg" title="relax">relax-3.3.6.Darwin.dmg</a></td>
+      <td><tt><small>e2a1924f3debd5726fab3e5cf94c8985</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-3.3.6.Darwin.dmg.sig" title="relax GPG signature">signature</a></td>
+      <td align="right">285,676,755</td>
     </tr>
   </tbody>
 </table>
@@ -283,16 +283,16 @@
       <td class="software_td_head3"><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-3.3.5.src.tar.bz2" title="relax">relax-3.3.5.src.tar.bz2</a></td>
-      <td><tt><small>c33d50779a0e3a923113c5a413920fa6</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-3.3.5.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td align="right">90,164,368</td>
+      <td><a href="http://download.gna.org/relax/relax-3.3.6.src.tar.bz2" title="relax">relax-3.3.6.src.tar.bz2</a></td>
+      <td><tt><small>66a915e6112db5018253112966926efd</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-3.3.6.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td align="right">90,005,292</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-3.3.5.src.zip" title="relax">relax-3.3.5.src.zip</a></td>
-      <td><tt><small>3f5ef48869d54c0c759ccd0fb8aa1695</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-3.3.5.src.zip.sig" title="relax GPG signature">signature</a></td>
-      <td align="right">95,423,081</td>
+      <td><a href="http://download.gna.org/relax/relax-3.3.6.src.zip" title="relax">relax-3.3.6.src.zip</a></td>
+      <td><tt><small>ce0606d0bc967363f195aff13339064d</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-3.3.6.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td align="right">95,356,922</td>
     </tr>
   </tbody>
 </table>
@@ -373,6 +373,44 @@
       <td class="software_td_head2"><strong>MD5 checksum</strong></td>
       <td class="software_td_head3"><strong>GPG signature</strong></td>
       <td class="software_td_head3"><strong>File size (bytes)</strong></td>
+    </tr>
+
+    <tr><td><em><a href="http://wiki.nmr-relax.com/Relax_3.3.6">Version 3.3.6</a> (2015-02-04)</em></td></tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-3.3.6.GNU-Linux.i686.tar.bz2" title="relax">relax-3.3.6.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>d60666e35a490ca58dd3e0e90688c4ec</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-3.3.6.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td align="right">90,072,588</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-3.3.6.GNU-Linux.x86_64.tar.bz2" title="relax">relax-3.3.6.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>d1c837c944a69dff680ec1eb38663a6d</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-3.3.6.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td align="right">90,031,646</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-3.3.6.Win32.zip" title="relax">relax-3.3.6.Win32.zip</a></td>
+      <td><tt><small>64259bb575d712ecd4fec07bc81100f1</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-3.3.6.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td align="right">95,348,971</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-3.3.6.Darwin.dmg" title="relax">relax-3.3.6.Darwin.dmg</a></td>
+      <td><tt><small>e2a1924f3debd5726fab3e5cf94c8985</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-3.3.6.Darwin.dmg.sig" title="relax GPG signature">signature</a></td>
+      <td align="right">285,676,755</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-3.3.6.src.tar.bz2" title="relax">relax-3.3.6.src.tar.bz2</a></td>
+      <td><tt><small>66a915e6112db5018253112966926efd</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-3.3.6.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td align="right">90,005,292</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-3.3.6.src.zip" title="relax">relax-3.3.6.src.zip</a></td>
+      <td><tt><small>ce0606d0bc967363f195aff13339064d</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-3.3.6.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td align="right">95,356,922</td>
     </tr>
 
     <tr><td><em><a href="http://wiki.nmr-relax.com/Relax_3.3.5">Version 3.3.5</a> (2015-01-27)</em></td></tr>
