--- a/head.html
+++ b/head.html
@@ -5,6 +5,9 @@
 
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
+  <!--Mobile device support-->
+  <meta name=viewport content="width=device-width, initial-scale=1">
+
   <!--relax css-->
   <link rel="stylesheet" type="text/css" href="http://www.nmr-relax.com/relax.css"/>
 
