Fix for the viewport <meta> tag for mobile device support.
This is in the SSI head element for all pages at http://www.nmr-relax.com.

--- a/head.html
+++ b/head.html
@@ -6,7 +6,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
   <!--Mobile device support-->
-  <meta name=viewport content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
   <!--relax css-->
   <link rel="stylesheet" type="text/css" href="http://www.nmr-relax.com/relax.css"/>
