Fixes for broken links to my PhD thesis.

--- a/refs.html
+++ b/refs.html
@@ -84,7 +84,7 @@
    <h3>Comprehensive reference</h3>
     <p>This PhD thesis expands on all of the d'Auvergne and Gooley references and describes model-free analysis and the program relax in more detail.</p>
     <ul class="ref_ul">
-     <li class="ref_li" id="dAuvergne06">d'Auvergne, E. J. (2006).   Protein dynamics: a study of the model-free analysis of NMR relaxation data. Ph.D. thesis, Biochemistry and Molecular Biology, University of Melbourne.  (<a href="http://eprints.infodiv.unimelb.edu.au/archive/00002799/">abstract</a>, <a href="http://eprints.infodiv.unimelb.edu.au/archive/00002799/01/thesis.pdf">PDF</a>)</li>
+     <li class="ref_li" id="dAuvergne06">d'Auvergne, E. J. (2006).   Protein dynamics: a study of the model-free analysis of NMR relaxation data. Ph.D. thesis, Biochemistry and Molecular Biology, University of Melbourne.  (<a href="https://minerva-access.unimelb.edu.au/handle/11343/39174">abstract</a>, <a href="https://minerva-access.unimelb.edu.au/bitstream/handle/11343/39174/67077_00002799_01_thesis.pdf?sequence=1">PDF</a>)</li>
     </ul>
     <p>It is also available in <a href="http://www.amazon.com/Protein-Dynamics-Model-free-Analysis-Relaxation/dp/3639057627">published book form</a>.</p>
   </div>
